shb, 정리 및 연결

--- a/Registor.html
+++ b/Registor.html
@@ -90,25 +90,7 @@
             </div>
         </div>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-        <div class="container">
-            <a class="navbar-brand" href="Main.html">MAIN</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="oi oi-menu"></span> Menu
-            </button>
-
-            <div class="collapse navbar-collapse" id="ftco-nav">
-                <ul class="navbar-nav ml-auto">
-
-                    <li class="nav-item"><a href="Main.html" class="nav-link">Main</a></li>
-                    <li class="nav-item"><a href="blog.html" class="nav-link">사용자 정보</a></li>
-                    <li class="nav-item"><a href="contact.html" class="nav-link">통계</a></li>
-                    <li class="nav-item"><a href="contact.html" class="nav-link">Login</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- END nav -->
+    
 
     <div class="hero-wrap hero-bread" style="background-image: url('images/bg_1.jpg');">
         <div class="container">
@@ -146,8 +128,8 @@
                     <input type="text" class="form-control" name="usertelnum1" />
                 </div>
 
-                <button type="submit" class="btn btn-primary">회원가입</button>
-                <button type="submit" class="btn btn-primary">취소</button>
+                <button type="button" class="btn btn-primary" onclick="location.href='Main.html' ">확인</button>
+                <button type="button" class="btn btn-primary" onclick="location.href='Main.html' ">취소</button>
             </form>
         </div>
     </section>
