--- a/statistics.html
+++ b/statistics.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vegefoods - Free Bootstrap 4 Template by Colorlib</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
+    <link rel="stylesheet" href="css/animate.css">
+
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/magnific-popup.css">
+
+    <link rel="stylesheet" href="css/aos.css">
+
+    <link rel="stylesheet" href="css/ionicons.min.css">
+
+    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="css/jquery.timepicker.css">
+
+
+    <link rel="stylesheet" href="css/flaticon.css">
+    <link rel="stylesheet" href="css/icomoon.css">
+    <link rel="stylesheet" href="css/style.css">
+
+    <style>
+        #edit {
+            position: relative;
+            left: 1050px;
+            top: 50px;
+            font-size: 15px;
+            border: 0px solid;
+            border-radius: 20px;
+            padding: 5px;
+            width: 100px;
+            text-align: center;
+        }
+
+        #x {
+            text-align: left;
+            position: relative;
+            left: 90px;
+            top: 10px;
+        }
+        }
+    </style>
 </head>
-<body>
+<body class="goto-here">
     <meta charset="UTF-8">
     <style type="text/css">
         @charset "utf-8";
@@ -14,6 +58,7 @@
         .vGraph1 {
             padding: 0 10px;
         }
+
             .vGraph1 ul {
                 position: relative;
                 margin: 0 50px;
@@ -78,6 +123,58 @@
                     color: #767676;
                 }
     </style>
+    <div class="py-1 bg-primary">
+        <div class="container">
+            <div class="row no-gutters d-flex align-items-start align-items-center px-md-0">
+                <div class="col-lg-12 d-block">
+                    <div class="row d-flex">
+                        <div class="col-md pr-4 d-flex topper align-items-center">
+                            <div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
+                            <span class="text">+ 1235 2355 98</span>
+                        </div>
+                        <div class="col-md pr-4 d-flex topper align-items-center">
+                            <div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
+                            <span class="text">youremail@email.com</span>
+                        </div>
+                        <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
+                            <span class="text">3-5 Business days delivery &amp; Free Returns</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+        <div class="container">
+            <a class="navbar-brand" href="Main.html">Refrigerator Manager</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="oi oi-menu"></span> Menu
+            </button>
+
+            <div class="collapse navbar-collapse" id="ftco-nav">
+                <ul class="navbar-nav ml-auto">
+
+                    <li class="nav-item"><a href="Home.html" class="nav-link">home</a></li>
+                    <li class="nav-item"><a href="user_information.html" class="nav-link">user information</a></li>
+                    <li class="nav-item"><a href="statistics.html" class="nav-link">statistics</a></li>
+                    <li class="nav-item"><a href="Main.html" class="nav-link">Log Out</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- END nav -->
+
+    <div class="hero-wrap hero-bread" style="background-image: url('images/bg_1.jpg');">
+        <div class="container">
+            <div class="row no-gutters slider-text align-items-center justify-content-center">
+                <div class="col-md-9 ftco-animate text-center">
+                    <p class="breadcrumbs"><span class="mr-2"><a href="index.html">메인</a></span> <span>사용자 정보</span></p>
+                    <h1 class="mb-0 bread">사용자 정보</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <h1>&nbsp;&nbsp;통계</h1><br>
     <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<월별총지출></h3>
     <div class="vGraph1">
@@ -98,73 +195,74 @@
         </ul>
         <meta charset="UTF-8">
         <style type="text/css">
-        .vGraph2 {
-            padding: 0 10px;
-        }
-
-            .vGraph2 ul {
-                margin: 0 50px;
+            .vGraph2 {
                 padding: 0 10px;
-                height: 200px;
-                width: 560px;
-                border: 1px solid #ddd;
-                border-top: 0;
-                border-right: 0;
-                font-size: 11px;
-                font-family: Tahoma, Geneva, sans-serif;
-                list-style: none;
             }
 
-                .vGraph2 ul:after {
-                    content: "";
-                    display: block;
-                    clear: both;
+                .vGraph2 ul {
+                    margin: 0 50px;
+                    padding: 0 10px;
+                    height: 200px;
+                    width: 560px;
+                    border: 1px solid #ddd;
+                    border-top: 0;
+                    border-right: 0;
+                    font-size: 11px;
+                    font-family: Tahoma, Geneva, sans-serif;
+                    list-style: none;
                 }
 
-            .vGraph2 li {
-                padding: 0 30px;
-                float: left;
-                display: inline;
-                width: 2%;
-                height: 100%;
-                margin: 0 -1.5%;
-                position: relative;
-                text-align: center;
-                white-space: nowrap;
-            }
+                    .vGraph2 ul:after {
+                        content: "";
+                        display: block;
+                        clear: both;
+                    }
 
-            .vGraph2 .gTerm {
-                position: relative;
-                display: inline-block;
-                width: 100%;
-                height: 20px;
-                line-height: 20px;
-                margin: 0 -100% -20px 0;
-                padding: 200px 0 0 0;
-                vertical-align: bottom;
-                color: #678df8;
-                font-weight: bold;
-            }
+                .vGraph2 li {
+                    padding: 0 30px;
+                    float: left;
+                    display: inline;
+                    width: 2%;
+                    height: 100%;
+                    margin: 0 -1.5%;
+                    position: relative;
+                    text-align: center;
+                    white-space: nowrap;
+                }
 
-            .vGraph2 .gBar {
-                position: relative;
-                display: inline-block;
-                width: 100%;
-                margin: -1px 0 0 0;
-                border: 1px solid #ccc;
-                border-bottom: 0;
-                background: #678df8;
-                vertical-align: bottom;
-            }
-
-                .vGraph2 .gBar span {
-                    position: absolute;
+                .vGraph2 .gTerm {
+                    position: relative;
+                    display: inline-block;
                     width: 100%;
-                    top: -20px;
-                    left: 0;
-                    color: #767676;
+                    height: 20px;
+                    line-height: 20px;
+                    margin: 0 -100% -20px 0;
+                    padding: 200px 0 0 0;
+                    vertical-align: bottom;
+                    color: #678df8;
+                    font-weight: bold;
                 }
-    </style>
+
+                .vGraph2 .gBar {
+                    position: relative;
+                    display: inline-block;
+                    width: 100%;
+                    margin: -1px 0 0 0;
+                    border: 1px solid #ccc;
+                    border-bottom: 0;
+                    background: #678df8;
+                    vertical-align: bottom;
+                }
+
+                    .vGraph2 .gBar span {
+                        position: absolute;
+                        width: 100%;
+                        top: -20px;
+                        left: 0;
+                        color: #767676;
+                    }
+        </style>
+    </div>
     <br><br><h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<유통기한 지난 식재료></h3>
     <br><div class="vGraph2">
         <ul>
@@ -182,7 +280,7 @@
     </div>
 
     <meta charset="UTF-8">
-        <style type="text/css">
+    <style type="text/css">
         .vGraph3 {
             padding: 0 10px;
         }
@@ -267,14 +365,14 @@
     </div>
 
     <meta charset="UTF-8">
-        <style type="text/css">
+    <style type="text/css">
         .vGraph4 {
             padding: 0 10px;
         }
 
             .vGraph4 ul {
                 margin: 0 50px;
-                padding: 0 10px; 
+                padding: 0 10px;
                 height: 200px;
                 width: 510px;
                 border: 1px solid #ddd;
