--- a/Home.html
+++ b/Home.html
@@ -99,16 +99,16 @@
 						    </thead>
 							<tbody>
 								<tr class="text-center">
-									<td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td>
+									<td class="product-remove"><a href="cart.html"><span class="ion-ios-close"></span></a></td>
 
 
 
 									<td class="product-name">
-										<h3 style="color:red">Bell Pepper</h3>
+										<a href="cart.html"><h3 style="color:red">Bell Pepper</h3></a>
 
 									</td>
 									<td class="quantity">
-										<p style="color:red">1&nbsp;&nbsp;&nbsp;<a href="#"><span class="ion-ios-add"></span></a></p>
+										<p style="color:red"><a href="#"><span class="ion-ios-arrow-up"></span></a>&nbsp;&nbsp;&nbsp;1&nbsp;&nbsp;&nbsp;<a href="#"><span class="ion-ios-arrow-down"></span></a></p>
 										
 									<td class="product-due">
 										<p style="color:red">2021.11.11</p>
