--- a/cart.html
+++ b/cart.html
@@ -50,31 +50,32 @@
   			</div>
   		</div>
   	</div>
-  	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-  		<div class="container">
-  			<a class="navbar-brand" href="Main.html">Refrigerator Manager</a>
-  			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-  				<span class="oi oi-menu"></span> Menu
-  			</button>
+    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+        <div class="container">
+            <a class="navbar-brand" href="Home.html">Refrigerator Manager</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="oi oi-menu"></span> Menu
+            </button>
 
-  			<div class="collapse navbar-collapse" id="ftco-nav">
-  				<ul class="navbar-nav ml-auto">
+            <div class="collapse navbar-collapse" id="ftco-nav">
+                <ul class="navbar-nav ml-auto">
 
-  					<li class="nav-item"><a href="Home.html" class="nav-link">home</a></li>
-  					<li class="nav-item"><a href="user_information.html" class="nav-link">user information</a></li>
-  					<li class="nav-item"><a href="statistics.html" class="nav-link">statistics</a></li>
-  					<li class="nav-item"><a href="Main.html" class="nav-link">Log Out</a></li>
-  				</ul>
-  			</div>
-  		</div>
-  	</nav>
+                    <li class="nav-item"><a href="Home.html" class="nav-link">home</a></li>
+                    <li class="nav-item"><a href="cart.html" class="nav-link">my cart</a></li>
+                    <li class="nav-item"><a href="user_information.html" class="nav-link">user information</a></li>
+                    <li class="nav-item"><a href="statistics.html" class="nav-link">statistics</a></li>
+                    <li class="nav-item"><a href="Main.html" class="nav-link">Log Out</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
   	<!-- END nav -->
 
   	<div class="hero-wrap hero-bread" style="background-image: url('images/bg_1.jpg');">
   		<div class="container">
   			<div class="row no-gutters slider-text align-items-center justify-content-center">
   				<div class="col-md-9 ftco-animate text-center">
-  					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Cart</span></p>
+                    <p class="breadcrumbs"><span class="mr-2">Refrigerator Manager</span></p>
   					<h1 class="mb-0 bread">My Cart</h1>
   				</div>
   			</div>
@@ -145,41 +146,7 @@
   					</div>
   				</div>
   			</div>
-  			<div class="row justify-content-end">
-  				<div class="col-lg-4 mt-5 cart-wrap ftco-animate">
-  					<div class="cart-total mb-3">
-  						<h3>Coupon Code</h3>
-  						<p>Enter your coupon code if you have one</p>
-  						<form action="#" class="info">
-  							<div class="form-group">
-  								<label for="">Coupon code</label>
-  								<input type="text" class="form-control text-left px-3" placeholder="">
-  							</div>
-  						</form>
-  					</div>
-  					<p><a href="checkout.html" class="btn btn-primary py-3 px-4">Apply Coupon</a></p>
-  				</div>
-  				<div class="col-lg-4 mt-5 cart-wrap ftco-animate">
-  					<div class="cart-total mb-3">
-  						<h3>Estimate shipping and tax</h3>
-  						<p>Enter your destination to get a shipping estimate</p>
-  						<form action="#" class="info">
-  							<div class="form-group">
-  								<label for="">Country</label>
-  								<input type="text" class="form-control text-left px-3" placeholder="">
-  							</div>
-  							<div class="form-group">
-  								<label for="country">State/Province</label>
-  								<input type="text" class="form-control text-left px-3" placeholder="">
-  							</div>
-  							<div class="form-group">
-  								<label for="country">Zip/Postal Code</label>
-  								<input type="text" class="form-control text-left px-3" placeholder="">
-  							</div>
-  						</form>
-  					</div>
-  					<p><a href="checkout.html" class="btn btn-primary py-3 px-4">Estimate</a></p>
-  				</div>
+  			
   				<div class="col-lg-4 mt-5 cart-wrap ftco-animate">
   					<div class="cart-total mb-3">
   						<h3>Cart Totals</h3>
@@ -201,7 +168,7 @@
   							<span>$17.60</span>
   						</p>
   					</div>
-  					<p><a href="checkout.html" class="btn btn-primary py-3 px-4">Proceed to Checkout</a></p>
+  					<p><a href="https://www.ecoop.or.kr/DureMall/shopMain.do" class="btn btn-primary py-3 px-4" target="_blank">Proceed to Checkout</a></p>
   				</div>
   			</div>
   		</div>
