--- a/user_information.html
+++ b/user_information.html
@@ -73,30 +73,31 @@
         </div>
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-	    <div class="container">
-			<a class="navbar-brand" href="Main.html">Refrigerator Manager</a>
-	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
-	      </button>
+        <div class="container">
+            <a class="navbar-brand" href="Home.html">Refrigerator Manager</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="oi oi-menu"></span> Menu
+            </button>
 
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-			  <ul class="navbar-nav ml-auto">
-			  	
-			  	<li class="nav-item"><a href="Home.html" class="nav-link">home</a></li>
-			  	<li class="nav-item"><a href="user_information.html" class="nav-link">user information</a></li>
-			  	<li class="nav-item"><a href="statistics.html" class="nav-link">statistics</a></li>
-			  	<li class="nav-item"><a href="Main.html" class="nav-link">Log Out</a></li>
-			  </ul>
-	      </div>
-	    </div>
-	  </nav>
+            <div class="collapse navbar-collapse" id="ftco-nav">
+                <ul class="navbar-nav ml-auto">
+
+                    <li class="nav-item"><a href="Home.html" class="nav-link">home</a></li>
+                    <li class="nav-item"><a href="cart.html" class="nav-link">my cart</a></li>
+                    <li class="nav-item"><a href="statistics.html" class="nav-link">statistics</a></li>
+                    <li class="nav-item"><a href="user_information.html" class="nav-link">user information</a></li>
+                    <li class="nav-item"><a href="Main.html" class="nav-link">Log Out</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!-- END nav -->
 
     <div class="hero-wrap hero-bread" style="background-image: url('images/bg_1.jpg');">
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <p class="breadcrumbs"><span class="mr-2"><a href="index.html">main</a></span> <span>user information</span></p>
+                    <p class="breadcrumbs"><span class="mr-2">Refrigerator Manager</span></p>
                     <h1 class="mb-0 bread">user information</h1>
                 </div>
             </div>
@@ -193,9 +194,9 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div id="edit"><a href="edit user information.html"><input type="submit" value="사용자 정보 수정" class="btn btn-primary py-3 px-4" /></a></div>
+                    <div id="edit"><a href="edit_user_information.html"><input type="submit" value="사용자 정보 수정" class="btn btn-primary py-3 px-4" /></a></div>
                 </div>
-                </div>
+            
             </section>
             <footer class="ftco-footer ftco-section">
                 <div class="row mb-5">
