--- a/Registor.html
+++ b/Registor.html
@@ -96,7 +96,8 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-0 bread">Registor</h1>
+                    <p class="breadcrumbs"><span class="mr-2">Refrigerator Manager</span></p>
+                    <h1 class="mb-0 bread">registor</h1>
                 </div>
             </div>
         </div>
